// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: SectionSwitch renders 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "paddingVertical": 16,
      }
    }
  >
    <Text
      style={
        [
          [
            {
              "color": "#25282D",
            },
            {
              "fontFamily": "Poppins-SemiBold",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "600",
              "letterSpacing": 0.0015,
              "textAlign": "left",
            },
          ],
          [
            {
              "flex": 1,
            },
            null,
          ],
        ]
      }
    >
      label
    </Text>
    <RCTSwitch
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#FEB027"
      style={
        {
          "height": 31,
          "width": 51,
        }
      }
      thumbTintColor="white"
      value={true}
    />
  </View>
</View>
`;

exports[`component: SectionSwitch renders disabled 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "paddingVertical": 16,
      }
    }
  >
    <Text
      style={
        [
          [
            {
              "color": "#25282D",
            },
            {
              "fontFamily": "Poppins-SemiBold",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "600",
              "letterSpacing": 0.0015,
              "textAlign": "left",
            },
          ],
          [
            {
              "flex": 1,
            },
            {
              "opacity": 0.3,
            },
          ],
        ]
      }
    >
      label
    </Text>
    <RCTSwitch
      accessibilityRole="switch"
      disabled={true}
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#FEB027"
      style={
        {
          "height": 31,
          "width": 51,
        }
      }
      thumbTintColor="white"
      value={true}
    />
  </View>
</View>
`;
